--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 
   <h2>Official Links</h2>
   <ul>
-    <li>Notion: (link later)</li>
+    <li>Notion:<li>
+  Notion:
+  <a href="https:// https://www.notion.so/LSS-Token-2ce3c19a103880e7a3caceddabf1bd8c"target="_blank">
+    LSS Token Documentation
+  </a>
+</li>
+
     <li>Contract: TBA</li>
     <li>PancakeSwap: TBA</li>
   </ul>
