--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <a href="https:// https://www.notion.so/LSS-Token-2ce3c19a103880e7a3caceddabf1bd8c"target="_blank">
     LSS Token Documentation
   </a>
+      <a href="https:// https://www.notion.so/LSS-Token-2c93c19a103880209aaad889e1f937c8"target="_blank">
+    LSS Token Documentation
+  </a>
 </li>
 
     <li>Contract: TBA</li>
