index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>LSS Token</title>
+  <title>LSSF Token</title>
 </head>
 <body>
-  <h1>LSS Token</h1>
+  <h1>LSSF Token</h1>
   <p>
-    LSS Token is a non-profit blockchain project dedicated to supporting
+    LSSF Token is a non-profit blockchain project dedicated to supporting
     children in need and protecting the Earth.
   </p>
 
   <h2>Token Information</h2>
   <ul>
-    <li>Name: LSS Token</li>
-    <li>Symbol: LSS</li>
+    <li>Name: LSSF Token</li>
+    <li>Symbol: LSSF</li>
     <li>Network: BNB Smart Chain</li>
     <li>Total Supply: 100,000,000</li>
   </ul>
@@ -23,11 +23,11 @@
   <ul>
     <li>Notion:<li>
   Notion:
-  <a href="https:// https://www.notion.so/LSS-Token-2ce3c19a103880e7a3caceddabf1bd8c"target="_blank">
-    LSS Token Documentation
+  <a href="https:// https://www.notion.so/LSSF-Token-2ce3c19a103880e7a3caceddabf1bd8c"target="_blank">
+    LSSF Token Documentation
   </a>
-      <a href="https:// https://www.notion.so/LSS-Token-2c93c19a103880209aaad889e1f937c8"target="_blank">
-    LSS Token Documentation
+      <a href="https:// https://www.notion.so/LSSF-Token-2c93c19a103880209aaad889e1f937c8"target="_blank">
+    LSSF Token Documentation
   </a>
 </li>
 
