--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     LSSF Token Documentation
   </a>
       <a href="https:// https://www.notion.so/LSSF-Token-2c93c19a103880209aaad889e1f937c8"target="_blank">
-    LSSF Token Documentation
+    LSSF Token Official Whitepaper v1.0 Documentation
   </a>
 </li>
 
