--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li>Notion:<li>
   Notion:
   <a href="https:// https://www.notion.so/LSSF-Token-2ce3c19a103880e7a3caceddabf1bd8c"target="_blank">
-    LSSF Token Documentation
+    LSSF Token home page Documentation
   </a>
       <a href="https:// https://www.notion.so/LSSF-Token-2c93c19a103880209aaad889e1f937c8"target="_blank">
     LSSF Token Official Whitepaper v1.0 Documentation
